[gd_scene load_steps=10 format=3 uid="uid://dpo7eea02nhf0"]

[ext_resource type="Script" path="res://Script/timing_platform.gd" id="1_the68"]
[ext_resource type="Texture2D" uid="uid://s6dgb58ael83" path="res://art/timing_platform.png" id="2_0bqn1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ehav4"]
light_mode = 1

[sub_resource type="Animation" id="Animation_8mmmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.8)]
}

[sub_resource type="Animation" id="Animation_3ot2v"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 5.27803),
"update": 0,
"values": [Color(1, 1, 1, 0.85), Color(1, 1, 1, 0), Color(1, 1, 1, 0.85), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c74gb"]
resource_name = "restore"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.85)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wf1sk"]
_data = {
"RESET": SubResource("Animation_8mmmr"),
"destroy": SubResource("Animation_3ot2v"),
"restore": SubResource("Animation_c74gb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyxr5"]
size = Vector2(100, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vaofp"]
size = Vector2(99, 8)

[node name="TimingPlatform" type="StaticBody2D"]
script = ExtResource("1_the68")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.8)
material = SubResource("CanvasItemMaterial_ehav4")
position = Vector2(0.499999, 0.499998)
texture = ExtResource("2_0bqn1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_wf1sk")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0.5)
shape = SubResource("RectangleShape2D_uyxr5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -25)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.5, -11)
shape = SubResource("RectangleShape2D_vaofp")

[node name="Restore" type="Timer" parent="."]
wait_time = 1.2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Restore" to="." method="_on_restore_timeout"]
